--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <header>
       <div class="container">
-        <h1>Inforekt</h1>
-        <h2>Got Rekt? You probably failed at basic OpSec; we tell you what you should have done better.</h2>
+        <h1>InfoRekt</h1>
+        <h2>Got Rekt? You probably failed at basic OpSec;<br/> we tell you what you should have done better.</h2>
 
         <section id="downloads">
           <a href="https://github.com/InfoRekt" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
