--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <h1>InfoRekt</h1>
-        <h2>Got Rekt? You probably failed at basic OpSec;<br/> we tell you what you should have done better.</h2>
+        <h2>Got Rekt? You probably failed at basic OpSec;</h2>
 
         <section id="downloads">
           <a href="https://github.com/InfoRekt" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
