--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Inforekt by InfoRekt</title>
+    <title>InfoRekt; a page about Security fails and what you should have done.</title>
   </head>
 
   <body>
