--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <h1>InfoRekt</h1>
-        <h2>Got Rekt? You probably failed at basic OpSec.</h2>
+        <h2>Got Rekt? Probably an OpSec fail.</h2>
       </div>
     </header>
 
