better contribute page

--- a/pages/contribute.html
+++ b/pages/contribute.html
@@ -18,13 +18,16 @@ The best way to submit an article is to create a pull request on our <a href="ht
 You do this by forking the repository and create a new article in the <i>_posts</i> directory. Keep in mind that the headers in the posts that 
 are already there also need to be included in your article. <br>
 <p>
-If this is your first submission you should also create an author <i>page</i>. It's strongly suggested to not use any actual personal information
+If this is your first submission you should also create an author <i>page</i>. It's strongly suggested to not use any personal information
 in the author page, unless you prefer this.<br>
 <p>
 Once you have done this create a pull request and wait for feedback or merge.
 <p>
 <h2>2. Email</h2>
 The other method is by email. You can email <a href="mailto:cpthindsight@inforekt.fail">ctphindsight@inforekt.fail</a> with your story. You will
-need to send us your story in txt or html format. Word, LaTeX, PDF or any other format is not acceptable and will be ignored.
-<p>
+need to send us your story in txt or html format. This can be both inside the email or as uncompressed attachment. <br>
+Zip, Rar, Word, LaTeX, PDF or any other format is not acceptable and will be ignored.
+<p><br><p>
+<font color="red">Note</font>: if you only want to submit a link to an article you want something written about you should hop over to our freenode #inforekt channel.
+You don't need an IRC client for this, you can just use the <a href="https://webchat.freenode.net">Freenode Webchat</a> and fill in the channel edit box with #inforekt 
 <p>
