--- a/pages/contribute.html
+++ b/pages/contribute.html
@@ -29,5 +29,5 @@ need to send us your story in txt or html format. This can be both inside the em
 Zip, Rar, Word, LaTeX, PDF or any other format is not acceptable and will be ignored.
 <p><br><p>
 <font color="red">Note</font>: if you only want to submit a link to an article you want something written about you should hop over to our freenode #inforekt channel.
-You don't need an IRC client for this, you can just use the <a href="https://webchat.freenode.net">Freenode Webchat</a> and fill in the channel edit box with #inforekt 
+You don't need an IRC client for this, you can just use the <a href="https://webchat.freenode.net">Freenode Webchat</a> and fill in the channel edit box with #inforekt. Another option is to just send us a DM or tweet at our twitter <a href="https://twitter.com/0xinforekt">0xInfoRekt</a>.
 <p>
