--- a/pages/contribute.html
+++ b/pages/contribute.html
@@ -24,7 +24,7 @@ in the author page, unless you prefer this.<br>
 Once you have done this create a pull request and wait for feedback or merge.
 <p>
 <h2>2. Email</h2>
-The other method is by email. You can email <a href="mailto:cpthindsight@inforekt.fail">ctphindsight@inforekt.fail</a> with your story. You will
+The other method is by email. You can email <a href="mailto:cpthindsight@inforekt.fail">cpthindsight@inforekt.fail</a> with your story. You will
 need to send us your story in txt or html format. This can be both inside the email or as uncompressed attachment. <br>
 Zip, Rar, Word, LaTeX, PDF or any other format is not acceptable and will be ignored.
 <p><br><p>
