--- a/pages/about.html
+++ b/pages/about.html
@@ -6,5 +6,29 @@ permalink: /about/
 
 ---
 <p class="message">
-todo
+<img src="/static/img/curious-cats.jpg"><br>
+Well hello there intartube traveler.
+<h3>The idea</h3>
+The main purpose of this website is to give advice about information security in an entertaining way.<br>
+<p>
+This is done by analysing articles and news items from various resources and commenting on where 
+the people in those news items made mistakes. The more sarcastic, funny or condesending the comments 
+the better. Serious comments are frowned upon, but the advice should be solid and help 
+prevent making the same style of mistakes that were made in the referenced news item.<br>
+<p>
+Serious articles can also pop up; we appologize up front for that. However, sometimes people want information about tools or 
+career advice. If those<br>
+<p>
+<h3>The site</h3>
+The site is maintained by a small group people with extensive backgrounds in information security and will not
+contain any advertisements. It's hosted on githubpages and thus for the forseeable time will
+not require any extensive hosting solutions. While this means that some features that might be nice to have, 
+like a forum for indepth discussions on information security topics, will be impossible.<br>
+<p>
+Anyone can submit articles to this website; to see how just visit the <a href="/contribute">submit</a> page 
+for information.<br>
+<p>
+<h3>Contact</h3>
+The admins can be contacted over twitter; just mention or DM <a href="https://twitter.com/0xinforekt">0xInfoRekt</a>. Email also works
+just mail <a href="mailto:cpthindsight@inforekt.fail">cpthindsight@inforekt.fail</a>.
 <p>
