--- a/pages/about.html
+++ b/pages/about.html
@@ -17,7 +17,7 @@ the better. Serious comments are frowned upon, but the advice should be solid an
 prevent making the same style of mistakes that were made in the referenced news item.<br>
 <p>
 Serious articles can also pop up; we appologize up front for that. However, sometimes people want information about tools or 
-career advice. If those<br>
+career advice. We can't ignore those!<br>
 <p>
 <h3>The site</h3>
 The site is maintained by a small group people with extensive backgrounds in information security and will not
