--- a/pages/contribute.html
+++ b/pages/contribute.html
@@ -6,7 +6,7 @@ permalink: /contribute/
 
 ---
 <p class="message">
-So, you want to contribute? Awesome! Your article can be in any style you prefer as long as you keep in mind that:
+So, you want to contribute? Awesome! <img src="/static/img/banana.gif" height="24" width="24"> Your article can be in any style you prefer as long as you keep in mind that:
 <li>It has to be somehow about information security;
 <li>It needs to have advice on where they went wrong and what they should have done;
 <li>Sarcasm, condesending tone or funny writing style are <u>optional</u> but appreciated, we are not a very serious site.
