--- a/pages/about.html
+++ b/pages/about.html
@@ -11,17 +11,17 @@ Well hello there intartube traveler.
 <h3>The idea</h3>
 The main purpose of this website is to give advice about information security in an entertaining way.<br>
 <p>
-This is done by analysing articles and news items from various resources and commenting on where 
-the people in those news items made mistakes. The more sarcastic, funny or condesending the comments 
+This is done by analyzing articles and news items from various resources and commenting on where 
+the people in those news items made mistakes. The more sarcastic, funny or condescending the comments 
 the better. Serious comments are frowned upon, but the advice should be solid and help 
 prevent making the same style of mistakes that were made in the referenced news item.<br>
 <p>
-Serious articles can also pop up; we appologize up front for that. However, sometimes people want information about tools or 
+Serious articles can also pop up; we apologize up front for that. However, sometimes people want information about tools or 
 career advice. We can't ignore those!<br>
 <p>
 <h3>The site</h3>
 The site is maintained by a small group people with extensive backgrounds in information security and will not
-contain any advertisements. It's hosted on githubpages and thus for the forseeable time will
+contain any advertisements. It's hosted on githubpages and thus for the foreseeable time will
 not require any extensive hosting solutions. While this means that some features that might be nice to have, 
 like a forum for indepth discussions on information security topics, will be impossible.<br>
 <p>
