--- a/pages/about.html
+++ b/pages/about.html
@@ -30,6 +30,12 @@ like a forum for indepth discussions on information security topics, will be imp
 Anyone can submit articles to this website; to see how just visit the <a href="/contribute">submit</a> page 
 for information.<br>
 <p>
+<h3>Authors</h3>
+This site has articles written by professionals! Our main authors are:<br>
+<li><a href="/author/cptHindsight">Captain Hindsight</a>
+<li><a href="/author/cptObvious">Captain Obvious</a>
+<li><a href="/author/genIgnorance">General Ignorance</a>
+<p>
 <h3>Contact</h3>
 The admins can be contacted over twitter; just mention or DM <a href="https://twitter.com/0xinforekt">0xInfoRekt</a>. Email also works
 just mail <a href="mailto:cpthindsight@inforekt.fail">cpthindsight@inforekt.fail</a>.
