--- a/pages/cptHindsight.html
+++ b/pages/cptHindsight.html
@@ -1,10 +1,10 @@
 ---
 layout: page
-title: About cptHindSight
+title: About captain Hindsight
 description: Who is this friendly hero with his great advice?
 permalink: /author/cptHindsight
 ---
 
 <p class="message">
-Look @ me; I R teh captain now!
+In hindsight it should have been obvious, that I'm a captain.
 <p>
