--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@ layout: default
 		   <span class="title"><a class="title" href="{{post.url | prepend: site.baseurl | prepend: site.url }}">{{post.title}}</a></span><br/>by <a href="/author/{{ post.author }}">{{post.author}}</a>
 		    @ {{ post.date | date: "%Y-%m-%d"}}<br/>
 		   <span class="srclink">Source: <a class="srclink" href="{{post.src}}" target="_blank">{{post.srcshort}}</a></span>
-		   {% if post.excerpt.size > 32%}{{post.excerpt}}{% else %}{{post.content | strip_html | strip_newlines | truncate: 260}}{%endif%}
-		   <a class="readmore" href="{{post.url | prepend: site.baseurl | prepend: site.url }}">Read More</a>	
-
-		<!-- {{post.content}} -->
-	        </div>
+    		{{ post.excerpt }} 
+    {% capture content_words %} 
+      {{ post.content | number_of_words }} 
+    {% endcapture %} 
+    {% capture excerpt_words %} 
+      {{ post.excerpt | number_of_words }} 
+    {% endcapture %} 
+{% if excerpt_words != content_words %}
+	<a class="readmore" href="{{post.url | prepend: site.baseurl | prepend: site.url }}">Read More</a>
+	{%endif%}
  		<hr>
+		<br><p>
 	        {%endfor%}
 	</section>
 </div>
