--- a/pages/about.html
+++ b/pages/about.html
@@ -19,6 +19,8 @@ prevent making the same style of mistakes that were made in the referenced news 
 Serious articles can also pop up; we apologize up front for that. However, sometimes people want information about tools or 
 career advice. We can't ignore those!<br>
 <p>
+Other posts might be short sarcastic reaction <a href="https://en.wikipedia.org/wiki/Meme" target=_blank>meme</a>'s to general news or info tidbits that don't warrent a full article.<br>
+<p>
 <h3>The site</h3>
 The site is maintained by a small group people with extensive backgrounds in information security and will not
 contain any advertisements. It's hosted on githubpages and thus for the foreseeable time will
@@ -27,6 +29,12 @@ like a forum for indepth discussions on information security topics, will be imp
 <p>
 Anyone can submit articles to this website; to see how just visit the <a href="/contribute">submit</a> page 
 for information.<br>
+<p>
+<h3>Authors</h3>
+This site has articles written by professionals! Our main authors are:<br>
+<li><a href="/author/cptHindsight">Captain Hindsight</a>
+<li><a href="/author/cptObvious">Captain Obvious</a>
+<li><a href="/author/genIgnorance">General Ignorance</a>
 <p>
 <h3>Contact</h3>
 The admins can be contacted over twitter; just mention or DM <a href="https://twitter.com/0xinforekt">0xInfoRekt</a>. Email also works
