--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@ layout: default
 <div class="index">
 	<section>
 		{% for post in site.posts %}
+       		<div id="postauthor">
+		       	<img src="/static/img/head_{{post.author}}.png"><br>
+			<a href="/author/{{ post.author }}">{{post.author}}</a>
+	       </div>
+
         	<div class="posts">
-		   <span class="title"><a class="title" href="{{post.url | prepend: site.baseurl | prepend: site.url }}">{{post.title}}</a></span><br/>by <a href="/author/{{ post.author }}">{{post.author}}</a>
+		   <span class="title"><a class="title" href="{{post.url | prepend: site.baseurl | prepend: site.url }}">{{post.title}}</a></span>
 		    @ {{ post.date | date: "%Y-%m-%d"}}<br/>
 		   <span class="srclink">Source: <a class="srclink" href="{{post.src}}" target="_blank">{{post.srcshort}}</a></span>
     		{{ post.excerpt }} 
@@ -20,7 +25,6 @@ layout: default
 	<a class="readmore" href="{{post.url | prepend: site.baseurl | prepend: site.url }}">Read More</a>
 	{%endif%}
  		<hr>
-		<br><p>
 	        {%endfor%}
 	</section>
 </div>
