start genIgnorance page

--- a/pages/genIgnorance.html
+++ b/pages/genIgnorance.html
@@ -6,5 +6,7 @@ permalink: /author/genIgnorance
 ---
 
 <p class="message">
-A general no less, bow before my ignorance!
+Catchphrase: A general no less, bow before my ignorance!
 <p>
+General Ignorance; lord and master over a household with 1 wife, 3 daughters, 4 sons, 3 dogs, 2 cats, temporarily 0 guinea pigs, 1 goat and 134 fish is stationed in Vostok Station as part of a good-will exchange program between the USA and Russia.<p>
+
