--- a/pages/genIgnorance.html
+++ b/pages/genIgnorance.html
@@ -10,10 +10,10 @@ Catchphrase: A general no less, bow before my ignorance!
 <h2>Personal information</h2>
 Real name: Trevor Gregor Isaac Froak<p>
 Lord and master and ruling with an iron fist over over a household he hardly is a part of, with 1 wife, 3 daughters, 4 sons, 3 dogs, 2 cats, temporarily 0 guinea pigs, 1 goat and 134 fish 
-is stationed in Vostok Station as part of a good-will exchange program between the USA and Russia.<br>
-While this does mean little time with his family, he in truth is not bothered by the physical absense of his family. His family doesn't seem too much either.<br>
+is stationed in Vostok Station as part of a good-will exchange program between the USA and Russia.<p>
+While this does mean little time with his family, he in truth is not bothered by the physical absense of his family. His family doesn't seem too much either.<p>
 Having grown up in a backwater place, his mother a mime and his fater a professional clown, he relishes in the fact that while it's cold outside in Vostok at least there are no 
-mimes or clowns there; which compensates everything in his mind. <br>
+mimes or clowns there; which compensates everything in his mind. <p>
 One thing he has in abundance however and that is spare time. Vostok cannot be called the center of the universe in anyone's reality and thus there is little more to do than spending 
 time online over a sattelite uplink. While this latency makes CounterStrike impossible to play, he does spend an enormous amount of time on websites also visited by males of any age with a 
 surplus of hormones, a lack of females and a steady supply of tissues and handcream. <br>
